hphp/hack/test/typecheck/new_inference/switch_tyvar.php.like_types.exp
File "switch_tyvar.php", line 19, characters 5-148:
Invalid return type (Typing[4323])
File "switch_tyvar.php", line 9, characters 40-42:
Some type constraint(s) are violated here
File "switch_tyvar.php", line 9, characters 40-42:
Tv2 is a constrained type parameter
File "switch_tyvar.php", line 19, characters 5-148:
Expected void because this function implicitly returns void
File "switch_tyvar.php", line 9, characters 40-42:
But got dynamic
